fix(laptop): fix view on mobile

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -1,7 +1,7 @@
-.laptop__mask {
+  .laptop__mask {
     width: 70%;
     position: absolute;
-    transform: translateY(-92.5%)
+    transform: translateY(-92.5%);
   }
 
   .laptop {
@@ -9,7 +9,7 @@
       font-size: 28px;
       padding-left: 15%;
       padding-right: 15%;
-      padding-bottom: 100px
+      padding-bottom: 100px;
   }
 
   .color__grey {
@@ -27,7 +27,6 @@
       margin-top: 3%; 
       margin-left: 12%;
       margin-right: 12%;
-      /* position: absolute;  */
   }
 
   .laptop__spase {
@@ -37,7 +36,6 @@
   .laptop__buttons {
       display: flex;
       justify-content: center;
-      /* margin-top: -320px; */
       font-size: 18px;
       padding-bottom: 50px;
       padding-top: 7%;
@@ -48,7 +46,6 @@
   }
 
   .laptop__text {
-      /* margin-top: -290px; */
       display: flex;
   }
 
@@ -72,6 +69,7 @@
           padding-left: 0%;
           padding-right: 0%;
           padding-bottom: 10px;
+          overflow: hidden;
       }
 
       .laptop__text {
@@ -108,4 +106,5 @@
           width: 10px;
       }
 
-  } 
+  }
+
